# liblanguage

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  configure.ac  language.pc.in  pkg-config.pc.cmake
debian/: changelog  control  liblanguage-azbooka-data.install  liblanguage-data.install  liblanguage-dev.install  liblanguage0.install  liblanguage1.install  rules
languages/: Makefile.am  be_BY.UTF-8  bg_BG.UTF-8  bn_IN.UTF-8  ca_ES.UTF-8  cs_CZ.UTF-8  de_DE.UTF-8  el_GR.UTF-8  es_ES.UTF-8  fi_FI.UTF-8  fr_FR.UTF-8  hu_HU.UTF-8  it_IT.UTF-8  ja_JP.UTF-8  ko_KR.UTF-8  lv_LV.UTF-8  nl_NL.UTF-8  pl_PL.UTF-8  pt_PT.UTF-8  ru_RU.UTF-8  sv_SE.UTF-8  tr_TR.UTF-8  uk_UA.UTF-8  vi_VN.UTF-8  zh_CN.UTF-8
src/: Makefile.am  language.c  language.h  liblanguage.c  liblanguage.h
