cmake_minimum_required(VERSION 2.6)
INCLUDE(CheckLibraryExists)
INCLUDE(CheckFunctionExists)
INCLUDE(GNUInstallDirs)
INCLUDE(FindPkgConfig)

PROJECT(liblanguage C)
set(PROJECT_DESCRIPTION "OpenInkpot language selection library")
set(PROJECT_VERSION_MAJOR "0")
set(PROJECT_VERSION_MINOR "2")
set(PROJECT_VERSION_PATCH "8")
set(PROJECT_VERSION
	"${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

ADD_DEFINITIONS(-Os -Wall -Werror --std=gnu99 
		-Wmissing-declarations -DDATADIR="${CMAKE_INSTALL_DATADIR}")

PKG_SEARCH_MODULE(LIBLOPS liblops)
IF(LIBLOPS_FOUND)
  INCLUDE_DIRECTORIES(${LIBLOPS_INCLUDE_DIRS})
ELSE (LIBLOPS_FOUND)
  MESSAGE( FATAL_ERROR "liblops not found")
ENDIF(LIBLOPS_FOUND)

SET(SOURCES src/liblanguage.c)
ADD_LIBRARY(language SHARED ${SOURCES})

SET(PKG_CONFIG_REQUIRES liblops)
SET(PKG_CONFIG_LIBDIR
    "\${prefix}/lib"
)
SET(PKG_CONFIG_INCLUDEDIR
    "\${prefix}/include/liblanguage"
)
SET(PKG_CONFIG_LIBS
    "-L\${libdir} -llanguage"
)
SET(PKG_CONFIG_CFLAGS
    "-I\${includedir}"
)

CONFIGURE_FILE(
  "${CMAKE_CURRENT_SOURCE_DIR}/pkg-config.pc.cmake"
  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
)

FILE(GLOB headers src/*.h)
FILE(GLOB languages languages/*.UTF-8)
SET_TARGET_PROPERTIES( language PROPERTIES VERSION ${PROJECT_VERSION}
					   SOVERSION ${PROJECT_VERSION_MAJOR})
INSTALL(FILES ${headers} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/liblanguage")
INSTALL(FILES ${languages} DESTINATION "${CMAKE_INSTALL_DATADIR}/i18n/languages")
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
	      DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
INSTALL(TARGETS language DESTINATION ${CMAKE_INSTALL_LIBDIR})
